--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+--no-cache-dir
 fastapi>=0.68.0
 uvicorn>=0.15.0
 sqlalchemy>=1.4.23
@@ -14,3 +15,4 @@ aiohttp>=3.8.0
 python-dotenv>=0.19.0
 bcrypt>=3.2.0
 pytest-asyncio>=0.21.0
+doppler-env>=0.3.1
