--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: portfolio-tracker
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install --no-cache-dir -r requirements.txt
     startCommand: python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
