--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: portfolio-tracker
     env: python
     plan: free
-    buildCommand: pip install --no-cache-dir -r requirements.txt
-    startCommand: python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    buildCommand: curl -Ls --tlsv1.2 --proto "=https" --retry 3 https://cli.doppler.com/install.sh | sh && pip install --no-cache-dir -r requirements.txt
+    startCommand: doppler run -- python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
